Sat Mar 29 21:06:55 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: fixed introduced buffer overflows

Sat Mar 29 20:32:15 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c:
	- add support for PARAMFMT2 token (from Sybase patch)

Sat Mar 29 19:58:47 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h include/tdsiconv.h src/server/login.c:
	* src/tds/iconv.c src/tds/mem.c src/tds/read.c:
	* src/tds/token.c:
	- improve i18n (charset conversion)

Fri Mar 28 14:20:44 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: read collation info for output parameters

Fri Mar 28 13:38:00 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsiconv.h src/tds/iconv.c src/tds/token.c:
	- improve i18n (charset conversion)

Thu Mar 27 21:52:40 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: add support for ROWFMT2 token

Thu Mar 27 21:05:33 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/rpc_ct_param.c:
	* src/ctlib/unittests/rpc_ct_setparam.c:
	* src/odbc/unittests/print.c:
	- remove warnings

Thu Mar 27 14:40:42 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/dblib/bcp.c Yet another re-write of _bcp_get_term_data

Thu Mar 27 17:19:40 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/rpc_ct_setparam.c:
	- remove some warnings

Thu Mar 27 17:04:00 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/cs.c:
	- namespace cleanup
	- fix core accessing freed memory
	- fix memory leak

Thu Mar 27 11:00:49 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_sql2string.c src/odbc/error.c:
	* src/odbc/unittests/common.c:
	* src/odbc/unittests/connect.c:
	* src/odbc/unittests/date.c src/odbc/unittests/print.c:
	* src/odbc/unittests/t0001.c src/odbc/unittests/t0002.c:
	* src/odbc/unittests/t0003.c src/odbc/unittests/t0004.c:
	- indented
