@@ -1,3 +1,9 @@
+Sun Mar 30 09:59:30 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
+	* src/tds/config.c src/tds/iconv.c src/tds/login.c:
+	* src/tds/numeric.c src/tds/query.c src/tds/read.c:
+	* src/tds/write.c:
+	- indent(1)
+
 Sat Mar 29 21:06:55 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
 	* src/tds/token.c: fixed introduced buffer overflows
 
